mux-compiler/tests/snapshots/executable_integration__executable_integration__semantic_duplicate_var.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
error: Duplicate declaration of 'x'
--> /home/derekcorn/code/mux-lang/test_scripts/error_cases/semantic_duplicate_var.mux:3:1
   |
 3 | auto x = 6
   | ^^^^^^^^^^
